18 Mar 1999  Hippo

	* fvwm/{fvwm{2.1,.h},builtins.c} Patch from Neil Bird to add conditions
	to the WindowId command.

1999-03-17  Matthias Clasen  <clasen@mathematik.uni-freiburg.de>

	* fvwm/builtins.c (CursorStyle): 
	* fvwm/fvwm2.1:
	* NEWS: enhance CursorStyle to allow specification of cursor
	colors and creating cursors from pixmaps.

1999-03-17  Tomas Ogren  <stric@ing.umu.se>

	* fvwm/add_window.c fvwm/borders.c fvwm/builtins.c fvwm/events.c
	fvwm/icons.c fvwm/misc.h fvwm/move.c fvwm/resize.c fvwm/virtual.c:
	Added one argument to SetupFrame, which is only used when shading to
	avoid windows with size -2 etc..

Wed Mar 17 06:42:10 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* INSTALL.fvwm: add a note about include directories for optional
	libraries. 

1999-03-17  Bob Woodside <proteus@pcnet.com>

	* docs/fvwm.lsm: corrected a couple of typos that prevented the LSM
	from accepting the entry.

Wed Mar 17 00:09:32 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* fvwm/modconf.c (SendDataToModule): fixed stupid off-by-one error
	that caused a stack smash.

1999-03-17  Matthias Clasen  <clasen@mathematik.uni-freiburg.de>

	* fvwm/module.c (KillModule): remove spurious debug message.

1999-03-16  Matthias Clasen  <clasen@mathematik.uni-freiburg.de>

	* fvwm/misc.h (name_list_struct): add starts_lowered and
	has_starts_lowered to tmpflags bitfield.
	* fvwm/add_window.c (AddWindow): 
	* fvwm/style.c (ProcessNewStyle): implement
	StartsLowered/StartRaised style flags.	
	* NEWS: 
	* fvwm/fvwm2.1: document StartsLowered/StartsRaised.
	
	* fvwm/icccm2.c (HandleSelectionClear): remove spurious fvwm_msg.

	* fvwm/misc.h (name_list_struct): add flag has_layer in a new
	tmpflags bitfield.
	* fvwm/style.c (ProcessNewStyle): set has_layer.
	* fvwm/add_window.c (merge_styles): use has_layer.

1999-03-16  Tomas Ogren  <stric@ing.umu.se>

	* modules/FvwmGtk/Makefile.am: Added GTK_CFLAGS and friends, the
	values we got from autoconf...

16th Mar 1999  Hippo
